[Feature] Refinements done